Added more images

--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
             </script>
         </div>
 
-        <div class="content-small">Content 2</div>
-        <div class="content-small">Content 3</div>
+        <div class="content-small"> 
+            <img src="images/Sector.png" height="350px", width="550px">
+        </div>
+        <div class="content-small">
+            <img src="images/Global.png" height="350px", width="550px">
+        </div>
+        <div class="content-small">
+            <img src="images/River.png" height="350px", width="550px">
+        </div>
         <div class="footer">Footer</div>
     </div>
 
