--- a/index.html
+++ b/index.html
@@ -19,20 +19,36 @@
         </div>
 
         <div class="content-small"> 
-            <img src="images/Sector.png" height="30px", width="50px">
+            <img src="images/Sector.png" height="330px", width="503px">
         </div>
 
         <div class="content-small">
-            <img src="images/River.png" height="30px", width="50px">
+            <img src="images/River.png" height="330px", width="503px">
         </div>
 
         <div class="content-long">
-            <div class="content-long-head"> Info </div>
-            
+            <div class="content-small-3">
+                <img src="images/packaging.jpg" height="100px" width="100px">
+            </div>
+            <div class="content-small-3">
+                Packaging
+            </div>
+            <div class="content-small-3">
+                <img src="images/river.jpg" height="100px", width="100px">
+            </div>
+            <div class="content-small-3">
+                Rivers
+            </div>
+            <div class="content-small-3">
+                <img src="images/world.png" height="100px", width="100px">
+            </div>
+            <div class="content-small-3">
+                Global
+            </div>
         </div>
 
         <div class="content-small-2">
-            <img src="images/Global.png" height="30px", width="50px">
+            <img src="images/Global.png" height="330px", width="503px">
         </div>
 
         <div class="footer">Footer</div>
