--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="apple-touch-icon" sizes="180x180" href="fav/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="fav/favicon-16x16.png">
+    <link rel="manifest" href="fav/site.webmanifest">
+    <link rel="mask-icon" href="fav/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width=device-width">
     <title> Plastic Pollution Data Visualisation </title>
@@ -8,7 +15,6 @@
 </head>
 
 <body>
-
 
     <div class="container">
         <div class="header"><h1>Plastic Pollution Dashboard</h1></div>
@@ -38,13 +44,14 @@
                 <img src="images/river.jpg" height="100px", width="300px">
             </div>
             <div class="content-small-3">
-                
+                The continent Asia has the highest share of plastic waste inputted into the worlds rivers. 
             </div>
             <div class="content-small-3">
                 <img src="images/world.jpg" height="100px", width="300px">
             </div>
             <div class="content-small-3">
-                Global
+                The top three countries who produce the most plastic waste in the world are: China (59.1 million tonnes per year)
+                USA (37.8 million tonnes per year) and Germany (14.5 million tonnes per year)
             </div>
         </div>
 
@@ -55,13 +62,7 @@
         <div class="footer">Footer</div>
     </div>
 
-    
-
 </body>
-
-
-
-
 </html>
 
 
