--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div class="content-long">
             <div class="content-small-3">
-                <img src="images/packagin.jpg" height="100px" width="300px">
+                <img src="images/Packagin.jpg" height="100px" width="300px">
             </div>
             <div class="content-small-3">
                 Packaging within the industrial sector is the sector which generates the most plastic waste. With over 140 million
