--- a/index.html
+++ b/index.html
@@ -59,7 +59,14 @@
             <img src="images/Global.png" height="430px", width="610px">
         </div>
 
-        <div class="footer">Footer</div>
+        <div class="footer">
+            <div class="content-small">
+                Sources
+            </div>
+            <div class="content-small">
+                Sources
+            </div>
+        </div>
     </div>
 
 </body>
