--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="images/river.jpg" height="100px", width="300px">
             </div>
             <div class="content-small-3">
-                The continent Asia has the highest share of plastic waste inputted into the worlds rivers. 
+                The continent Asia has the highest share of plastic waste inputted to the worlds rivers. 
             </div>
             <div class="content-small-3">
                 <img src="images/world.jpg" height="100px", width="300px">
